app/css/layout.css
/* Animations */
@keyframes dlgAnim {
    0% {
        opacity: 0.8;
        transform: translate(-50%, -120%);
    }
    100% {
        opacity: 1;
        transform: translate(-50%, -50%);
    }
}

/* fonts */
@font-face {
    font-family: 'Aldrich';
    font-style: normal;
    font-weight: 400;
    font-display: swap;
    src: url("../res/fonts/Aldrich.woff2") format('woff2');
    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}

/* General */
html {
    margin: 0 auto;
    font-family: 'Aldrich', sans-serif;
    height: 100%;
}

body {
    min-height: 100%;
    margin: 0;
    background-image: url("../res/images/index-bg.jpg"); /* Credits: to https://www.pixiv.net/en/users/8782286 */
    background-size: cover;
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-color: #101010;
    background-blend-mode: overlay;
}

.intro-block {
    width: 500px;
    height: 150px;
    /* margin: auto; */
    /* background-color: rgba(0, 0, 0, .85); */
    text-align: center;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.upper-box {
    width: 100%;
    height: 80%;
}


/* Picture Box */

.pic {
    width: 30%;
    height: 100%;
    float: left;
}

.pic img {
    border-radius: 100%;
    width: 80%;
}


/* Info Box */

.info {
    width: 70%;
    height: 100%;
    float: right;
    overflow: hidden;
    text-align: left;
}

h2 {
    color: white;
    margin: 3px;
}

p {
    color: #ccc;
    font-size: 14px;
}

/* Link Box */
.links-box {
    width: 100%;
    height: 20%;
    position: relative;
    bottom: 0;
    /* top: 80%; */
}

ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    display: flex;
    justify-content: center;
}

/* li {} */

li a {
    text-decoration: none;
    display: block;
    padding: 8px;
    color: white;
    transition: 0.1s;
}

li a:hover {
    border-bottom: 3px solid #eee;
    transition: 0.1s;
}

/* sections */

.content > div {
    width: calc(80% - 50px);
    margin-top: 80vh; /* positioning the divs at 80% of the viewport height */
    margin-left: auto;
    margin-right: auto;
    padding: 50px;
    background-color: rgba(0,0,0,.4);
    color: white;
    box-shadow: 0 0 5px rgba(255, 255, 255, .8);
}



/* home */


/* about */
#about {
    display: none;
}

#about ul {
    list-style-type: none;
    margin-left: 10px;
    padding: 0;
    display: block;
}

/* portfolio */
#portfolio{
    display: none;
}

.portfolioEntries {
    display: block;
}

.portfolioEntry {
    display: grid;
    grid-template-columns: 80% 20%;
    border-bottom: 1px solid #1e1e1e;
    padding: 5px;
    overflow: scroll;
}
.portfolioEntry:hover {
    background-color: rgba(17, 17, 17, .5);
}

.portfolioEntry a {
    color: #eee;
    text-decoration: underline;
}

.portfolioEntry img {
    width: 100%;
}

.textColumn {
    width: 95%;
}

/* resume */
#resume{
    display: none;
}
iframe {
    width: 100%;
    height: 800px;
}

/* contact */
#contact{
    display: none;
}

#contact a {
    color: #ccc;
    text-decoration: none;
}

.icon {
    width: 24px;
    height: 24px;
    display: inline;
}

/* Blog */
.darkBg {
    display: none;
    width: 100%;
    height: 100%;
    position: fixed;
    top: 0;
    left: 0;
    background-color: #101010;
    opacity: 0.7;
    z-index: 9999;
}

.blog {
    display: none;
    position: fixed;
    width: 400px;
    z-index: 9999;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    animation: dlgAnim 0.5s;
}

.message {
    display: block;
    width: 100%;
    padding: 7px;
    background-color: rgb(55, 55, 55);
    border-radius: 5px 5px 0 0;
}

.btn-zone {
    display: block;
    width: 100%;
    padding: 7px;
    background-color: rgb(45, 45, 45);
    border-radius: 0 0 5px 5px;
    text-align: right;
}

button {
    width: 80px;
    background-color: rgb(55, 55, 55);
    color: #ccc;
    border: 0;
    border-radius: 5px;
    cursor: pointer;
}

